--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ant-design-vue": "1.5.0-rc.6",
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
+    "echarts": "^4.7.0",
     "enquire.js": "^2.1.6",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
@@ -25,6 +26,7 @@
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "qs": "latest",
+    "v-charts": "^1.19.0",
     "viser-vue": "^2.4.6",
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.2.1",
